Finished routing and Header

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap'); */
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 body {
@@ -11,6 +11,9 @@ body {
     -moz-osx-font-smoothing: grayscale; */
 }
 
+#root {
+    height: 100vh;
+}
 /* html {
     box-sizing: border-box;
 }
